C'est l'heure de commit